Code style page, add last-modified-at

--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@ title: Home
       <a href="https://github.com/rdilweb">A few web libraries</a>
     </li>
     <li>
-      <a href="https://cakebot.club">Cakebot</a>
-    </li>
-    <li>
       <a href="https://docs.rdil.rocks">
         A lot of other things, some are documented here
       </a>
@@ -61,9 +58,6 @@ title: Home
       <a href="https://cirruslabs.org">Cirrus CI</a>
     </li>
     <li>
-      <a href="https://masmas-js.github.io">MasMas.js</a>
-    </li>
-    <li>
       <a href="https://zlanguage.github.io">
         The Z programming language
       </a>
@@ -72,6 +66,15 @@ title: Home
       <a href="https://opensourcedesign.net">
         Open Source Design
       </a>
+    </li>
+  </ul>
+</div>
+
+<div>
+  <h2>More about me</h2>
+  <ul>
+    <li>
+      <a href="/pages/code-style">My code style</a>
     </li>
   </ul>
 </div>
