--- a/public/404.html
+++ b/public/404.html
@@ -115,11 +115,52 @@
 
         <main class="content">
             <div class="title">
-                <h1>404</h1>
+                <h1>Reece Dunham</h1>
                 <p>
-                    The file you are searching for could not be found! Check the
-                    URL or try again later.
+                    Heya, I'm a coder, designer of websites, and open-source
+                    lover.
                 </p>
+            </div>
+            <div class="columns">
+                {% include components/startcard.html %}
+                <h3>About</h3>
+                <p>
+                    I am a software developer and I maintain many open source
+                    projects on GitHub. I have been coding since 2014, and can
+                    say I have proficient knowledge inmost of the common
+                    programming languages such as Python, HTML, and JS to name a
+                    few.
+                </p>
+                {% include components/endcard.html %} {% include
+                components/startcard.html %}
+                <h3>Experience</h3>
+                <p>
+                    I have taken a large amount of classes on Python (my main
+                    language) and web design, plus some on other languages such
+                    as Java, React, and the basics of Docker. I run several OSS
+                    projects that have helped me to learn how to apply code to
+                    the real world.
+                </p>
+                {% include components/endcard.html %} {% include
+                components/startcard.html %}
+                <h3>Hobbies</h3>
+                <p>
+                    When I'm not working on software, I am most likely walking
+                    my dog, enjoying tennis, taking a hike in the local woods,
+                    playing a video game or two, listening to Spotify, or
+                    watching Netflix. Or sleeping - that's great for gaining
+                    energy to code more.
+                </p>
+                {% include components/endcard.html %}
+            </div>
+
+            <div>
+                <h2>More about me</h2>
+                <ul>
+                    <li>
+                        <a href="/pages/code-style">My code style</a>
+                    </li>
+                </ul>
             </div>
         </main>
         <link
