Continue to migrate

--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="msapplication-TileColor" content="#303f9f" />
         <meta name="theme-color" content="#303f9f" />
-        <title>Home | RDIL's Site</title>
+        <title>Not Found | RDIL's Site</title>
         <meta property="og:title" content="Home" />
         <meta property="og:locale" content="en_US" />
         <meta
