--- a/public/pages/code-style.html
+++ b/public/pages/code-style.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="msapplication-TileColor" content="#303f9f" />
         <meta name="theme-color" content="#303f9f" />
-        <title>Home | RDIL's Site</title>
+        <title>My Code Style | RDIL's Site</title>
         <meta property="og:title" content="Home" />
         <meta property="og:locale" content="en_US" />
         <meta
@@ -115,128 +115,55 @@
 
         <main class="content">
             <div class="title">
-                <h1>Reece Dunham</h1>
+                <h1>My Code Style</h1>
                 <p>
-                    Heya, I'm a coder, designer of websites, and open-source
-                    lover.
+                    I personally have a less traditional code style for certain
+                    languages, but as long as there is an automatic formatter or
+                    linter I'm fine with any code style for the most part.
                 </p>
             </div>
-            <div class="columns">
-                <div class="column">
-                    <div class="card">
-                        <div class="card-content">
-                            <h3>About</h3>
-                            <p>
-                                I am a software developer and I maintain many
-                                open source projects on GitHub. I have been
-                                coding since 2014, and can say I have proficient
-                                knowledge inmost of the common programming
-                                languages such as Python, HTML, and JS to name a
-                                few.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="column">
-                    <div class="card">
-                        <div class="card-content">
-                            <h3>Experience</h3>
-                            <p>
-                                I have taken a large amount of classes on Python
-                                (my main language) and web design, plus some on
-                                other languages such as Java, React, and the
-                                basics of Docker. I run several OSS projects
-                                that have helped me to learn how to apply code
-                                to the real world.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="column">
-                    <div class="card">
-                        <div class="card-content">
-                            <h3>Hobbies</h3>
-                            <p>
-                                When I'm not working on software, I am most
-                                likely walking my dog, enjoying tennis, taking a
-                                hike in the local woods, playing a video game or
-                                two, listening to Spotify, or watching Netflix.
-                                Or sleeping - that's great for gaining energy to
-                                code more.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
             <div>
-                <h2>Get in touch</h2>
+                <h2>Python</h2>
                 <p>
-                    Want to have a chat? My contact info is on the sidebar. I'm
-                    looking forward to meeting you!
+                    I like statements that are short. Functions should have type
+                    hints if they don't need to support 3.5 or lower. One
+                    variable per line. Imports should either all be full module,
+                    or all be members (`from` imports). The only exception to
+                    this is if an initialization function not wrapped in a
+                    `__main__` check needs to be run.
                 </p>
-
-                <h2>Things I've made</h2>
-                <ul>
-                    <li>
-                        <a href="https://area4.readthedocs.io/en/stable"
-                            >area4</a
-                        >
-                    </li>
-                    <li>
-                        <a href="https://privacy.rdil.rocks"
-                            >My Privacy Journal</a
-                        >
-                    </li>
-                    <li>
-                        <a href="https://github.com/rdilweb"
-                            >A few web libraries</a
-                        >
-                    </li>
-                    <li>
-                        <a href="https://docs.rdil.rocks">
-                            A lot of other things, some are documented here
-                        </a>
-                    </li>
-                </ul>
-
-                <h2>Open-source projects I've worked on</h2>
-                <ul>
-                    <li>
-                        <a href="https://github.com/PowerShell/PowerShell"
-                            >PowerShell Core</a
-                        >
-                    </li>
-                    <li>
-                        <a
-                            href="https://github.com/PowerShell/PowerShell-Docker"
-                        >
-                            PowerShell Docker Images (I'm an official curator!)
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://cirruslabs.org">Cirrus CI</a>
-                    </li>
-                    <li>
-                        <a href="https://zlanguage.github.io">
-                            The Z programming language
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://opensourcedesign.net">
-                            Open Source Design
-                        </a>
-                    </li>
-                </ul>
             </div>
-
             <div>
-                <h2>More about me</h2>
-                <ul>
-                    <li>
-                        <a href="/pages/code-style">My code style</a>
-                    </li>
-                </ul>
+                <h2>Java</h2>
+                <p>
+                    I like statements that are short. Lambdas are amazing and I
+                    love using them where possible. Statements can be long,
+                    assuming they aren't just return chains. Final variables
+                    should be used for the compiler to inline them. Builders
+                    should be continued on the next line, with the `.` being 4
+                    spaces after the column the first line of the builder is on.
+                    If statements shouldn't go on more than one line. Opening
+                    brackets should be on the line of the block they start, they
+                    do not get their own line.
+                </p>
+            </div>
+            <div>
+                <h2>JavaScript</h2>
+                <p>
+                    Here is where things get really controversial. ES6 should be
+                    used if either Babel is in the environment, it will work on
+                    its own, or a bundler will automatically rewrite it as ES5.
+                    This means arrow functions are very great. Semicolons should
+                    be avoided at all costs. As long as the statement is
+                    properly logically closed, a semicolon should not be used.
+                    Things should be indented like Python: 4 spaces. 2 spaces
+                    isn't enough to see blocks in my opinion. JSX should follow
+                    Prettier defaults. Quotes should be double quotes. <br />My
+                    Prettier configuration:
+                </p>
+                <code>
+                    { "semi": false, "tabWidth": 4, "trailingComma": "none" }
+                </code>
             </div>
         </main>
         <link
