--- a/public/pages/code-style.html
+++ b/public/pages/code-style.html
@@ -49,6 +49,7 @@
         />
         <link rel="manifest" href="/manifest.json" />
         <link rel="stylesheet" href="/bundle.min.css" />
+        <link rel="stylesheet" href="/page-code-style.min.css" />
     </head>
     <body>
         <div id="nav-btn" class="openbtn" onclick="toggleNav()">
@@ -128,9 +129,9 @@
                     I like statements that are short. Functions should have type
                     hints if they don't need to support 3.5 or lower. One
                     variable per line. Imports should either all be full module,
-                    or all be members (`from` imports). The only exception to
+                    or all be members (<code>from</code> imports). The only exception to
                     this is if an initialization function not wrapped in a
-                    `__main__` check needs to be run.
+                    <code>__main__</code> check needs to be run.
                 </p>
             </div>
             <div>
