--- a/public/pages/code-style.html
+++ b/public/pages/code-style.html
@@ -129,9 +129,9 @@
                     I like statements that are short. Functions should have type
                     hints if they don't need to support 3.5 or lower. One
                     variable per line. Imports should either all be full module,
-                    or all be members (<code>from</code> imports). The only exception to
-                    this is if an initialization function not wrapped in a
-                    <code>__main__</code> check needs to be run.
+                    or all be members (<code>from</code> imports). The only
+                    exception to this is if an initialization function not
+                    wrapped in a <code>__main__</code> check needs to be run.
                 </p>
             </div>
             <div>
